--- a/src/main/resources/templates/site/register.html
+++ b/src/main/resources/templates/site/register.html
@@ -66,12 +66,14 @@
 			<div class="container pl-5 pr-5 pt-3 pb-3 mt-3 mb-3">
 				<h3 class="text-center text-info border-bottom pb-3">注&nbsp;&nbsp;册</h3>
 <!--				[2.2 开发注册功能]th:action：Thymeleaf 中用于动态设置表单提交路径的属性-->
-				<form class="mt-5" method="post" th:action="@${/register}">
+				<form class="mt-5" method="post" th:action="@{/register}">
 					<div class="form-group row">
 						<label for="username" class="col-sm-2 col-form-label text-right">账号:</label>
 						<div class="col-sm-10">
 <!--							[2.2 开发注册功能] name申明数据来源，name属性值必须与controller中user对象的属性名一致,springMVC基于同名原则传参-->
-							<input type="text" class="form-control" id="username" name="username" placeholder="请输入您的账号!" required>
+<!--							[2.2 开发注册功能-2] th:value 1. 注册失败返回注册页面->保留用户填写的数据 2. 初次进入注册页面->不应该有默认值 -->
+							<input type="text" class="form-control"
+								   id="username" name="username" placeholder="请输入您的账号!" required>
 							<div class="invalid-feedback">
 								该账号已存在!
 							</div>
