--- a/src/main/resources/templates/site/operate-result.html
+++ b/src/main/resources/templates/site/operate-result.html
@@ -6,7 +6,7 @@
 	<link rel="icon" href="https://static.nowcoder.com/images/logo_87_87.png"/>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
 <!--	[2.2 开发注册功能] 通过thymeleaf管理css和js文件-->
-	<link rel="stylesheet" th:href="${/css/global.css}" />
+	<link rel="stylesheet" th:href="@{/css/global.css}">
 	<title>牛客网-操作结果</title>
 </head>
 <body class="bg-white">
