--- a/src/main/resources/templates/mail/activation.html
+++ b/src/main/resources/templates/mail/activation.html
@@ -14,7 +14,7 @@
 		<p>
 			您正在注册牛客网, 这是一封激活邮件, 请点击
 <!--			[2.2 开发注册功能]-->
-			<a th:href=${url}">此链接</a>,
+			<a th:href="${url}">此链接</a>,
 			激活您的牛客账号!
 		</p>
 	</div>
