--- a/src/main/resources/templates/site/register.html
+++ b/src/main/resources/templates/site/register.html
@@ -71,10 +71,15 @@
 						<label for="username" class="col-sm-2 col-form-label text-right">账号:</label>
 						<div class="col-sm-10">
 <!--							[2.2 开发注册功能] name申明数据来源，name属性值必须与controller中user对象的属性名一致,springMVC基于同名原则传参-->
-<!--							[2.2 开发注册功能-2] th:value 1. 注册失败返回注册页面->保留用户填写的数据 2. 初次进入注册页面->不应该有默认值 -->
+<!--							[2.2 开发注册功能-2] th:value设置默认值 1. 注册失败返回注册页面->保留用户填写的数据 2. 初次进入注册页面->不应该有默认值 -->
+<!--							[2.2 开发注册功能-2] 报错显示 th:classappend 动态添加 is-invalid 样式-->
 							<input type="text" class="form-control"
+								   th:classappend="${usernameMsg} ? 'is-invalid'"
+								   th:value="${user!=null?user.username:''}"
 								   id="username" name="username" placeholder="请输入您的账号!" required>
-							<div class="invalid-feedback">
+<!--							[2.2 开发注册功能-2] 错误信息设置成变量，在controller中设置变量值-->
+<!--							[2.2 开发注册功能-2] th:if 当后端传来错误消息时div才会渲染-->
+							<div class="invalid-feedback" th:if="${usernameMsg}" th:text="${usernameMsg}">
 								该账号已存在!
 							</div>
 						</div>
@@ -83,8 +88,15 @@
 						<label for="password" class="col-sm-2 col-form-label text-right">密码:</label>
 						<div class="col-sm-10">
 <!--							[2.2 开发注册功能] name申明数据来源，name属性值必须与controller中user对象的属性名一致,springMVC基于同名原则传参-->
-							<input type="password" class="form-control" id="password" name="password" placeholder="请输入您的密码!" required>
-							<div class="invalid-feedback">
+<!--							[2.2 开发注册功能-2] th:value设置默认值 1. 注册失败返回注册页面->保留用户填写的数据 2. 初次进入注册页面->不应该有默认值-->
+<!--							[2.2 开发注册功能-2] 报错显示 th:classappend 动态添加 is-invalid 样式-->
+							<input type="password" th:class="form-control"
+								   th:classappend="${passwordMsg} ? 'is-invalid'"
+								   th:value="${user!=null?user.password:''}"
+								   id="password" name="password" placeholder="请输入您的密码!" required>
+<!--							[2.2 开发注册功能-2] 错误信息设置成变量，在controller中设置变量值-->
+<!--							[2.2 开发注册功能-2] th:if 当后端传来错误消息时div才会渲染-->
+							<div class="invalid-feedback" th:if="${passwordMsg}" th:text="${passwordMsg}">
 								密码长度不能小于8位!
 							</div>							
 						</div>
@@ -92,7 +104,10 @@
 					<div class="form-group row mt-4">
 						<label for="confirm-password" class="col-sm-2 col-form-label text-right">确认密码:</label>
 						<div class="col-sm-10">
-							<input type="password" class="form-control" id="confirm-password" placeholder="请再次输入密码!" required>
+<!--							[2.2 开发注册功能-2] th:value设置默认值 1. 注册失败返回注册页面->保留用户填写的数据 2. 初次进入注册页面->不应该有默认值-->
+							<input type="password" class="form-control"
+								   th:value="${user!=null?user.password:''}"
+								   id="confirm-password" placeholder="请再次输入密码!" required>
 							<div class="invalid-feedback">
 								两次输入的密码不一致!
 							</div>
@@ -102,8 +117,15 @@
 						<label for="email" class="col-sm-2 col-form-label text-right">邮箱:</label>
 						<div class="col-sm-10">
 <!--							[2.2 开发注册功能] name申明数据来源，name属性值必须与controller中user对象的属性名一致,springMVC基于同名原则传参-->
-							<input type="email" class="form-control" id="email" name = "email" placeholder="请输入您的邮箱!" required>
-							<div class="invalid-feedback">
+<!--							[2.2 开发注册功能-2] th:value设置默认值 1. 注册失败返回注册页面->保留用户填写的数据 2. 初次进入注册页面->不应该有默认值-->
+<!--							[2.2 开发注册功能-2] 报错显示 th:classappend 动态添加 is-invalid 样式-->
+							<input type="email" class="form-control"
+								   th:classappend="${emailMsg} ? 'is-invalid'"
+								   th:value="${user!=null?user.email:''}"
+								   id="email" name = "email" placeholder="请输入您的邮箱!" required>
+<!--							[2.2 开发注册功能-2] 错误信息设置成变量，在controller中设置变量值-->
+<!--							[2.2 开发注册功能-2] th:if 当后端传来错误消息时div才会渲染-->
+							<div class="invalid-feedback"  th:if="${emailMsg}" th:text="${emailMsg}">
 								该邮箱已注册!
 							</div>
 						</div>
