--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,12 +34,13 @@
 							<li class="nav-item ml-3 btn-group-vertical">
 								<a class="nav-link position-relative" href="site/letter.html">消息<span class="badge badge-danger">12</span></a>
 							</li>
-<!--							[2.2 开发注册功能]-->
+<!--							[2.2 开发注册功能]首页注册按钮配置-->
 							<li class="nav-item ml-3 btn-group-vertical">
 								<a class="nav-link" th:href="@{/register}">注册</a>
 							</li>
 							<li class="nav-item ml-3 btn-group-vertical">
-								<a class="nav-link" href="site/login.html">登录</a>
+<!--								[2.2 开发注册功能-2]首页登录按钮配置-->
+								<a class="nav-link" th:href="@{/login}">登录</a>
 							</li>
 							<li class="nav-item ml-3 btn-group-vertical dropdown">
 								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
