--- a/src/main/resources/templates/site/login.html
+++ b/src/main/resources/templates/site/login.html
@@ -1,18 +1,20 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="https://static.nowcoder.com/images/logo_87_87.png"/>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
-	<link rel="stylesheet" href="../css/global.css" />
-	<link rel="stylesheet" href="../css/login.css" />
+	<!--[2.2 开发注册功能-2]使用 Thymeleaf 动态生成资源路径-->
+	<link rel="stylesheet" th:href="@{/css/global.css}" />
+	<link rel="stylesheet" th:href="@{/css/login.css}" />
 	<title>牛客网-登录</title>
 </head>
 <body>
 	<div class="nk-container">
 		<!-- 头部 -->
-		<header class="bg-dark sticky-top">
+		<!--[2.2 开发注册功能-2] header复用-->
+		<header class="bg-dark sticky-top" th:replace="index::header">
 			<div class="container">
 				<!-- 导航 -->
 				<nav class="navbar navbar-expand-lg navbar-dark">
@@ -91,7 +93,8 @@
 							</div>
 						</div>
 						<div class="col-sm-4">
-							<img src="../img/captcha.png" style="width:100px;height:40px;" class="mr-2"/>
+<!--							[2.2 开发注册功能-2]使用 Thymeleaf 动态生成验证码图片的路径-->
+							<img th:src="@{/img/captcha.png}" style="width:100px;height:40px;" class="mr-2"/>
 							<a href="javascript:;" class="font-size-12 align-bottom">刷新验证码</a>
 						</div>
 					</div>				
@@ -178,6 +181,7 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
-	<script src="../js/global.js"></script>
+	<!--[2.2 开发注册功能-2]使用 Thymeleaf 动态生成资源路径-->
+	<script th:src="@{/js/global.js}"></script>
 </body>
 </html>
